# TP_POO

./: CMakeLists.txt  main.cpp
Classes/: Buffer.cpp  Buffer.h  Caravanas.cpp  Caravanas.h  Cidades.cpp  Cidades.h  Deserto.cpp  Deserto.h  Itens.cpp  Itens.h  Jogo.cpp  Jogo.h  Montanhas.cpp  Montanhas.h
